<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/BaseLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout style="@style/TopBar"
        android:id="@+id/top">
        <ImageButton style="@style/ImageButton"
            android:id="@+id/back"
            android:src="@drawable/ic_back" />

        <TextView style="@style/TopText"
            android:id="@+id/textView"
            android:layout_toEndOf="@+id/back"
            android:text="@string/select_roi"/>
    </RelativeLayout>

    <GridLayout style="@style/BottomBar"
        android:id="@+id/bottom">
        <Button style="@style/BtnImage"
            android:id="@+id/reset"
            android:background="@drawable/ic_reset"
            android:text="@string/reset"/>
        <Button style="@style/BtnImage"
            android:id="@+id/ok"
            android:background="@drawable/ic_ok_small"
            android:text="@string/ok"/>
    </GridLayout>

    <com.azbyn.ocr.ZoomableImageView style="@style/ImageView"
        android:id="@+id/imageView"
        android:scaleType="fitStart"
        app:margin="@dimen/img_margins"
        android:layout_above="@+id/roiText"
        android:layout_below="@+id/top"/>

    <com.azbyn.ocr.roi.SelectRoiOverlay
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/roiText"
        android:layout_below="@+id/top"
        android:layout_marginBottom="0dp" />
    <TextView
        android:id="@+id/roiText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/bottom"
        android:layout_marginBottom="0dp"
        android:gravity="center_vertical"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>